--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-      "name": "mon-frigo-frontend",
-      "private": true,
-      "version": "0.0.0",
-      "type": "module",
-      "scripts": {
-            "dev": "vite",
-            "build": "vite build",
-            "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-            "preview": "vite preview"
-      },
-      "dependencies": {
-            "firebase": "^12.0.0",
-            "lucide-react": "^0.525.0",
-            "react": "^18.3.1",
-            "react-dom": "^18.3.1"
-      },
-      "devDependencies": {
-            "@tailwindcss/postcss": "^4.0.0",
-            "@tailwindcss/typography": "^0.5.13",
-            "@types/react": "^18.3.3",
-            "@types/react-dom": "^18.3.0",
-            "@vitejs/plugin-react": "^4.3.1",
-            "autoprefixer": "^10.4.19",
-            "eslint": "^8.57.0",
-            "eslint-plugin-react": "^7.34.2",
-            "eslint-plugin-react-hooks": "^4.6.2",
-            "eslint-plugin-react-refresh": "^0.4.7",
-            "postcss": "^8.4.38",
-            "tailwindcss": "^3.4.4",
-            "vite": "^5.3.1"
-      }
+  "name": "mon-frigo-frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "firebase": "^12.0.0",
+    "framer-motion": "^12.0.0",  <--- AJOUTEZ CETTE LIGNE
+    "lucide-react": "^0.525.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.3.1"
+  }
 }
