--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "firebase": "^12.0.0",
-    "framer-motion": "^12.0.0",  <--- AJOUTEZ CETTE LIGNE
+    "framer-motion": "^12.0.0",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
