--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-node-polyfills": "^0.24.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
