--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "firebase": "^12.0.0",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.525.0",
